--- a/cv_4.tex
+++ b/cv_4.tex
@@ -45,7 +45,7 @@ A position in the field of computer programming with special interests in embedd
 
 \begin{rSection}{Education}
 
-{\bf Southern Polytechnic State University} \hfill {\em Expected December 2014} \\ 
+{\bf Southern Polytechnic State University} \hfill {\em Graduated December 2014} \\ 
 B.S. in Computer Science \\%\smallskip \\
 Member of Upsilon Pi Epsilon \\
 Member of Autonomous Underwater Vehicle Team \\
@@ -55,7 +55,7 @@ Overall GPA: 3.59
 
 \begin{rSection}{Academic Projects}
 
-\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{Spring 2012 - Now}{}{}
+\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{\em Spring 2012 - Fall 2014}{}{}
 
 %\item Designed, developed, and tested the thruster control and vision sub-systems in the SPSU Autonomous Underwater Vehicle(AUV) Team’s 2012 entry in AUVSI’s RoboSub competition.
 \item Representative of the SPSU AUV Team at RoboSub 2012.
@@ -63,7 +63,7 @@ Overall GPA: 3.59
 \item SPSU AUV Team Software Lead from Summer 2012 to present.
 \item Worked on KSU-SPSU Competition Teams, Non-Sports consolidation team.
 \item Designed, developed, and tested the competition vehicle's programming.
-\item \textbf{Technical Environment:} Linux-based OSs, Hardware includes: Raspberry Pi and ODROID U3
+\item \textbf{Technical Environment:} Linux-based OS's, Hardware includes: Raspberry Pi, Arduino, and ODROID U3
 \end{rSubsection}
 
 \end{rSection}
@@ -71,10 +71,10 @@ Overall GPA: 3.59
 \begin{rSection}{Computer Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Languages & C++, Python, Ada, \LaTeX, Java, Javascript, PHP, HTML, CSS \\
+Languages & C++, Python, Ada, \LaTeX, Java, JavaScript, PHP, HTML, CSS \\
 Operating Systems & Windows 7, Ubuntu, Raspbian \\
 %Databases & MySQL, PostgreSQL, Microsoft SQL \\
-Tools & Git, SVN, MKS
+Tools & Git, Subversion, MKS Integrity
 \end{tabular}
 
 \end{rSection}
@@ -85,8 +85,8 @@ Tools & Git, SVN, MKS
 
 \begin{rSection}{Related Experience}
 
-\begin{rSubsection}{Georgia Tech Research Institute}{Spring 2013}{Cooperative Education - Student Assistant}{Atlanta, GA}
-\item Worked on optimizing build process for an embedded system
+\begin{rSubsection}{Georgia Tech Research Institute}{\em Spring 2013}{Student Assistant}{Atlanta, GA}
+\item Worked on simplifying build process for an embedded system
 \item Researched emulating a legacy system for continued use of a critical program
 \end{rSubsection}
 
@@ -98,19 +98,19 @@ Tools & Git, SVN, MKS
 
 \begin{rSection}{Additional Employment}
 
-\begin{rSubsection}{Tuesday Morning}{December 2009 - Now}{Store Associate}{Austell, GA}
-\item Guided two stores on the use of new computerized cash register system
-\item Developed step by step guide for opening and closing procedures for new cash register system that is currently in use by my home store
-\item Assist in key holder activities
+\begin{rSubsection}{Tuesday Morning}{\em Dec 2009 - Dec 2014}{Store Associate}{Austell, GA}
+\item Demonstrated critical thinking skills by providing solutions to management
+\item Ran the cash register finalizing sales and returns
+\item Received and stocked merchandise in an orderly manner
 \end{rSubsection}
 
 \end{rSection}
 
 \begin{rSection}{Awards}
 
-{Eagle Scout, Troop 357, Atlanta Area Council} \hfill November 2008\\
+{Eagle Scout, Atlanta Area Council} \hfill November 2008\\
 {Charter Member of Upsilon Pi Epsilon, Lambda chapter of GA} \hfill April 2013 \\
-{SPSU CSE Dean's List} \hfill Fall 2011, Fall 2012
+%{SPSU CSE Dean's List} \hfill Fall 2011, Fall 2012
 
 \end{rSection}
 
