Updated Phone, Objective, AUVT Environment, OSes, Tools, TM Desc

--- a/cv_4.tex
+++ b/cv_4.tex
@@ -29,13 +29,14 @@
 \name{Taylor Scott Martin} % Your name
 \address{5136 Meadows Lake Dr \\ Powder Springs, GA 30127} % Your address
 %\address{123 Pleasant Lane \\ City, State 12345} % Your secondary addess (optional)
-\address{(770)~$\cdot$~739~$\cdot$~5533 \\ taylor.martin357@gmail.com} % Your phone number and email
+%470-338-1291
+\address{(470)~$\cdot$~338~$\cdot$~1291 \\ taylor.martin357@gmail.com} % Your phone number and email
 
 \begin{document}
 
 \begin{rSection}{Objective}
 
-A position in the field of computer programming with special interests in embedded systems.
+Seeking an entry level position in the field of computer programming.
 
 \end{rSection}
 
@@ -63,7 +64,8 @@ Overall GPA: 3.59
 \item SPSU AUV Team Software Lead from Summer 2012 to present.
 \item Worked on KSU-SPSU Competition Teams, Non-Sports consolidation team.
 \item Designed, developed, and tested the competition vehicle's programming.
-\item \textbf{Technical Environment:} Linux-based OS's, Hardware includes: Raspberry Pi, Arduino, and ODROID U3
+\item \textbf{Technical Environment:} Ubuntu, Raspbian, Arduino IDE, and OpenCV
+\item \textbf{Hardware:} Raspberry Pi, Arduino, and ODROID U3
 \end{rSubsection}
 
 \end{rSection}
@@ -72,9 +74,9 @@ Overall GPA: 3.59
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Languages & C++, Python, Ada, \LaTeX, Java, JavaScript, PHP, HTML, CSS \\
-Operating Systems & Windows 7, Ubuntu, Raspbian \\
+Operating Systems & Ubuntu, Raspbian, Arch Linux, and Solaris 8 \\
 %Databases & MySQL, PostgreSQL, Microsoft SQL \\
-Tools & Git, Subversion, MKS Integrity
+Tools & Git, GitHub, Subversion, MKS Integrity
 \end{tabular}
 
 \end{rSection}
@@ -99,9 +101,10 @@ Tools & Git, Subversion, MKS Integrity
 \begin{rSection}{Additional Employment}
 
 \begin{rSubsection}{Tuesday Morning}{\em Dec 2009 - Dec 2014}{Store Associate}{Austell, GA}
-\item Demonstrated critical thinking skills by providing solutions to management
-\item Ran the cash register finalizing sales and returns
-\item Received and stocked merchandise in an orderly manner
+\item Handled receipt of store merchandise using electronic inventory control system
+%\item Provided accurate counts during physical product inventory
+\item Configured and maintained shelving units per written instructions
+\item Troubleshooted common problems and referred to supervisor for complex problems
 \end{rSubsection}
 
 \end{rSection}
