--- a/cv_4.tex
+++ b/cv_4.tex
@@ -29,10 +29,13 @@
 \name{Taylor Scott Martin} % Your name
 \address{5136 Meadows Lake Dr \\ Powder Springs, GA 30127} % Your address
 %\address{123 Pleasant Lane \\ City, State 12345} % Your secondary addess (optional)
-%470-338-1291
 \address{(470)~$\cdot$~338~$\cdot$~1291 \\ taylor.martin357@gmail.com} % Your phone number and email
 
 \begin{document}
+
+%----------------------------------------------------------------------------------------
+% OBJECTIVE
+%----------------------------------------------------------------------------------------
 
 \begin{rSection}{Objective}
 
@@ -54,21 +57,9 @@ Overall GPA: 3.59
 
 \end{rSection}
 
-\begin{rSection}{Academic Projects}
-
-\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{\em Spring 2012 - Fall 2014}{}{}
-
-%\item Designed, developed, and tested the thruster control and vision sub-systems in the SPSU Autonomous Underwater Vehicle(AUV) Team’s 2012 entry in AUVSI’s RoboSub competition.
-\item Representative of the SPSU AUV Team at RoboSub 2012.
-\item SPSU AUV Team Vice-President from Spring 2013 to Summer 2014.
-\item SPSU AUV Team Software Lead from Summer 2012 to present.
-\item Worked on KSU-SPSU Competition Teams, Non-Sports consolidation team.
-\item Designed, developed, and tested the competition vehicle's programming.
-\item \textbf{Technical Environment:} Ubuntu, Raspbian, Arduino IDE, and OpenCV
-\item \textbf{Hardware:} Raspberry Pi, Arduino, and ODROID U3
-\end{rSubsection}
-
-\end{rSection}
+%----------------------------------------------------------------------------------------
+% COMPUTER SKILLS
+%----------------------------------------------------------------------------------------
 
 \begin{rSection}{Computer Skills}
 
@@ -92,11 +83,11 @@ Tools & Git, GitHub, Subversion, MKS Integrity
 \item Researched emulating a legacy system for continued use of a critical program
 \end{rSubsection}
 
-%------------------------------------------------
-
-
 \end{rSection}
 
+%----------------------------------------------------------------------------------------
+% ADDITIONAL EMPLOYMENT
+%----------------------------------------------------------------------------------------
 
 \begin{rSection}{Additional Employment}
 
@@ -108,6 +99,30 @@ Tools & Git, GitHub, Subversion, MKS Integrity
 \end{rSubsection}
 
 \end{rSection}
+
+%----------------------------------------------------------------------------------------
+% ACADEMIC PROJECTS
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{Academic Projects}
+
+\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{\em Spring 2012 - Fall 2014}{}{}
+
+%\item Designed, developed, and tested the thruster control and vision sub-systems in the SPSU Autonomous Underwater Vehicle(AUV) Team’s 2012 entry in AUVSI’s RoboSub competition.
+\item Representative of the SPSU AUV Team at RoboSub 2012.
+\item SPSU AUV Team Vice-President from Spring 2013 to Summer 2014.
+\item SPSU AUV Team Software Lead from Summer 2012 to present.
+\item Worked on KSU-SPSU Competition Teams, Non-Sports consolidation team.
+\item Designed, developed, and tested the competition vehicle's programming.
+\item \textbf{Technical Environment:} Ubuntu, Raspbian, Arduino IDE, and OpenCV
+\item \textbf{Hardware:} Raspberry Pi, Arduino, and ODROID U3
+\end{rSubsection}
+
+\end{rSection}
+
+%----------------------------------------------------------------------------------------
+% AWARDS
+%----------------------------------------------------------------------------------------
 
 \begin{rSection}{Awards}
 
