Combined Employment sections

--- a/cv_4.tex
+++ b/cv_4.tex
@@ -76,20 +76,12 @@ Tools & Git, GitHub, Subversion, MKS Integrity
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Related Experience}
+\begin{rSection}{Previous Employment}
 
 \begin{rSubsection}{Georgia Tech Research Institute}{\em Spring 2013}{Student Assistant}{Atlanta, GA}
 \item Worked on simplifying build process for an embedded system
 \item Researched emulating a legacy system for continued use of a critical program
 \end{rSubsection}
-
-\end{rSection}
-
-%----------------------------------------------------------------------------------------
-% ADDITIONAL EMPLOYMENT
-%----------------------------------------------------------------------------------------
-
-\begin{rSection}{Additional Employment}
 
 \begin{rSubsection}{Tuesday Morning}{\em Dec 2009 - Dec 2014}{Store Associate}{Austell, GA}
 \item Handled receipt of store merchandise using electronic inventory control system
