Updated Dates, TM Job Desc, removed "and" in OS line, UPE is an honor society

--- a/cv_4.tex
+++ b/cv_4.tex
@@ -65,7 +65,7 @@ Overall GPA: 3.59
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Languages & C++, Python, Ada, \LaTeX, Java, JavaScript, PHP, HTML, CSS \\
-Operating Systems & Ubuntu, Raspbian, Arch Linux, and Solaris 8 \\
+Operating Systems & Ubuntu, Raspbian, Arch Linux, Solaris 8 \\
 %Databases & MySQL, PostgreSQL, Microsoft SQL \\
 Tools & Git, GitHub, Subversion, MKS Integrity
 \end{tabular}
@@ -78,14 +78,14 @@ Tools & Git, GitHub, Subversion, MKS Integrity
 
 \begin{rSection}{Previous Employment}
 
-\begin{rSubsection}{Georgia Tech Research Institute}{\em Spring 2013}{Student Assistant}{Atlanta, GA}
+\begin{rSubsection}{Georgia Tech Research Institute}{\em Jan 2013 - Aug 2013}{Student Assistant}{Atlanta, GA}
 \item Worked on simplifying build process for an embedded system
 \item Researched emulating a legacy system for continued use of a critical program
 \end{rSubsection}
 
 \begin{rSubsection}{Tuesday Morning}{\em Dec 2009 - Dec 2014}{Store Associate}{Austell, GA}
 \item Handled receipt of store merchandise using electronic inventory control system
-%\item Provided accurate counts during physical product inventory
+\item Provided accurate counts during physical product inventory
 \item Configured and maintained shelving units per written instructions
 \item Troubleshooted common problems and referred to supervisor for complex problems
 \end{rSubsection}
@@ -98,7 +98,7 @@ Tools & Git, GitHub, Subversion, MKS Integrity
 
 \begin{rSection}{Academic Projects}
 
-\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{\em Spring 2012 - Fall 2014}{}{}
+\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{\em Jan 2012 - Dec 2014}{}{}
 
 %\item Designed, developed, and tested the thruster control and vision sub-systems in the SPSU Autonomous Underwater Vehicle(AUV) Team’s 2012 entry in AUVSI’s RoboSub competition.
 \item Representative of the SPSU AUV Team at RoboSub 2012.
@@ -119,7 +119,7 @@ Tools & Git, GitHub, Subversion, MKS Integrity
 \begin{rSection}{Awards}
 
 {Eagle Scout, Atlanta Area Council} \hfill November 2008\\
-{Charter Member of Upsilon Pi Epsilon, Lambda chapter of GA} \hfill April 2013 \\
+{Charter Member of Upsilon Pi Epsilon Honor Society, Lambda chapter of GA} \hfill April 2013 \\
 %{SPSU CSE Dean's List} \hfill Fall 2011, Fall 2012
 
 \end{rSection}
