Fixed AUV end date in detail

--- a/Martin_Taylor_Resume.tex
+++ b/Martin_Taylor_Resume.tex
@@ -103,7 +103,7 @@ Tools & Git, GitHub, Subversion, MKS Integrity
 %\item Designed, developed, and tested the thruster control and vision sub-systems in the SPSU Autonomous Underwater Vehicle(AUV) Team’s 2012 entry in AUVSI’s RoboSub competition.
 \item Representative of the SPSU AUV Team at RoboSub 2012.
 \item SPSU AUV Team Vice-President from Spring 2013 to Summer 2014.
-\item SPSU AUV Team Software Lead from Summer 2012 to present.
+\item SPSU AUV Team Software Lead from Summer 2012 to Summer 2014.
 \item Worked on KSU-SPSU Competition Teams, Non-Sports consolidation team.
 \item Designed, developed, and tested the competition vehicle's programming.
 \item \textbf{Technical Environment:} Ubuntu, Raspbian, Arduino IDE, and OpenCV
