Updated Resume After career appt.

--- a/Martin_Taylor_Resume.tex
+++ b/Martin_Taylor_Resume.tex
@@ -26,10 +26,10 @@
 
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
-\name{Taylor Scott Martin} % Your name
+\name{Taylor S. Martin} % Your name
 \address{5136 Meadows Lake Dr \\ Powder Springs, GA 30127} % Your address
 %\address{123 Pleasant Lane \\ City, State 12345} % Your secondary addess (optional)
-\address{(470)~$\cdot$~338~$\cdot$~1291 \\ taylor.martin357@gmail.com} % Your phone number and email
+\address{(470)~$\cdot$~338~$\cdot$~5115 \\ taylor.martin357@gmail.com} % Your phone number and email
 
 \begin{document}
 
@@ -39,7 +39,7 @@
 
 \begin{rSection}{Objective}
 
-Seeking an entry level position in the field of computer programming.
+Seeking an entry level position in the field of computer programming to expand upon my experience from my Co-Op experience at The Georgia Tech Research Institute.
 
 \end{rSection}
 
@@ -50,10 +50,32 @@ Seeking an entry level position in the field of computer programming.
 \begin{rSection}{Education}
 
 {\bf Southern Polytechnic State University} \hfill {\em Graduated December 2014} \\ 
-B.S. in Computer Science \\%\smallskip \\
-Member of Upsilon Pi Epsilon \\
-Member of Autonomous Underwater Vehicle Team \\
+Bachelor's of Science in Computer Science \\%\smallskip \\
+Member of Upsilon Pi Epsilon Honor Society\\
 Overall GPA: 3.59
+
+\end{rSection}
+
+%----------------------------------------------------------------------------------------
+% Relavant Experience
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{Relevant Experience}
+
+\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{\em Jan 2012 - Dec 2014}{}{}
+\item Vice-President 2013-2014, Software Lead 2012-2013
+\item Competed against 25 other teams at the 2012 RoboSub International Competition.
+\item Worked on KSU-SPSU Competition Teams, Non-Sports consolidation team.
+\item Collaborated with the Mechanical and Electrical leaders to integrate all three systems
+\item \textbf{Technical Environment:} Ubuntu, Raspbian, Arduino IDE, and OpenCV
+\item \textbf{Hardware:} Raspberry Pi, Arduino, and ODROID U3
+\end{rSubsection}
+
+\begin{rSubsection}{Georgia Tech Research Institute}{\em Jan 2013 - Aug 2013}{Student Assistant}{Atlanta, GA}
+\item Reduced build process for software from multiple pages of hand-typed commands to \\
+one simplified build script
+\item Researched emulating a legacy system for continued use of required build software
+\end{rSubsection}
 
 \end{rSection}
 
@@ -78,36 +100,18 @@ Tools & Git, GitHub, Subversion, MKS Integrity
 
 \begin{rSection}{Previous Employment}
 
-\begin{rSubsection}{Georgia Tech Research Institute}{\em Jan 2013 - Aug 2013}{Student Assistant}{Atlanta, GA}
-\item Worked on simplifying build process for an embedded system
-\item Researched emulating a legacy system for continued use of a critical program
+\begin{rSubsection}{Premier Staffing}{\em Mar 2017 - Jun 2017}{Temp Materials Handler}{Kennesaw, GA}
+\item Worked with a team of five other people to produce more than 50 window shades a day
+\item Cross-trained and worked at two to three stations each shift
+\item Provided quality control by inspecting each shade for fabric defects and checking for correct measurements
 \end{rSubsection}
 
 \begin{rSubsection}{Tuesday Morning}{\em Dec 2009 - Dec 2014}{Store Associate}{Austell, GA}
-\item Handled receipt of store merchandise using electronic inventory control system
+\item Handled receipt of store merchandise, totaling to more than 5,000 items per week
 \item Provided accurate counts during physical product inventory
 \item Configured and maintained shelving units per written instructions
-\item Troubleshooted common problems and referred to supervisor for complex problems
-\end{rSubsection}
-
-\end{rSection}
-
-%----------------------------------------------------------------------------------------
-% ACADEMIC PROJECTS
-%----------------------------------------------------------------------------------------
-
-\begin{rSection}{Academic Projects}
-
-\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{\em Jan 2012 - Dec 2014}{}{}
-
-%\item Designed, developed, and tested the thruster control and vision sub-systems in the SPSU Autonomous Underwater Vehicle(AUV) Team’s 2012 entry in AUVSI’s RoboSub competition.
-\item Representative of the SPSU AUV Team at RoboSub 2012.
-\item SPSU AUV Team Vice-President from Spring 2013 to Summer 2014.
-\item SPSU AUV Team Software Lead from Summer 2012 to Summer 2014.
-\item Worked on KSU-SPSU Competition Teams, Non-Sports consolidation team.
-\item Designed, developed, and tested the competition vehicle's programming.
-\item \textbf{Technical Environment:} Ubuntu, Raspbian, Arduino IDE, and OpenCV
-\item \textbf{Hardware:} Raspberry Pi, Arduino, and ODROID U3
+\item Troubleshooted common cash register problems
+\item Trained new and old staff on using updated point of sale system
 \end{rSubsection}
 
 \end{rSection}
@@ -118,8 +122,7 @@ Tools & Git, GitHub, Subversion, MKS Integrity
 
 \begin{rSection}{Awards}
 
-{Eagle Scout, Atlanta Area Council} \hfill November 2008\\
-{Charter Member of Upsilon Pi Epsilon Honor Society, Lambda chapter of GA} \hfill April 2013 \\
+{Eagle Scout} and {Charter Member of Upsilon Pi Epsilon Honor Society, Lambda chapter of GA}
 %{SPSU CSE Dean's List} \hfill Fall 2011, Fall 2012
 
 \end{rSection}
