Fixed some minor errors

--- a/Martin_Taylor_Resume.tex
+++ b/Martin_Taylor_Resume.tex
@@ -62,8 +62,7 @@ Overall GPA: 3.59
 
 \begin{rSection}{Relevant Experience}
 
-\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{\em Jan 2012 - Dec 2014}{}{}
-\item Vice-President 2013-2014, Software Lead 2012-2013
+\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{\em Jan 2012 - Dec 2014}{Vice-President 2013-2014, Software Lead 2012-2013}{}
 \item Competed against 25 other teams at the 2012 RoboSub International Competition.
 \item Worked on KSU-SPSU Competition Teams, Non-Sports consolidation team.
 \item Collaborated with the Mechanical and Electrical leaders to integrate all three systems
@@ -71,7 +70,7 @@ Overall GPA: 3.59
 \item \textbf{Hardware:} Raspberry Pi, Arduino, and ODROID U3
 \end{rSubsection}
 
-\begin{rSubsection}{Georgia Tech Research Institute}{\em Jan 2013 - Aug 2013}{Student Assistant}{Atlanta, GA}
+\begin{rSubsection}{Georgia Tech Research Institute}{\em Jan 2013 - Aug 2013}{Co-Op Student Assistant}{Atlanta, GA}
 \item Reduced build process for software from multiple pages of hand-typed commands to \\
 one simplified build script
 \item Researched emulating a legacy system for continued use of required build software
