Updated Resume Reduced to one page

--- a/Martin_Taylor_Resume.tex
+++ b/Martin_Taylor_Resume.tex
@@ -24,12 +24,12 @@
 
 \usepackage{newcent}
 
-\usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
+\usepackage[left=0.75in,top=0.5in,right=0.75in,bottom=0.5in]{geometry} % Document margins
 
 \name{Taylor S. Martin} % Your name
-\address{5136 Meadows Lake Dr \\ Powder Springs, GA 30127} % Your address
+\address{(470)~$\cdot$~338~$\cdot$~5115 \\ Powder Springs, GA 30127} % Your address
 %\address{123 Pleasant Lane \\ City, State 12345} % Your secondary addess (optional)
-\address{(470)~$\cdot$~338~$\cdot$~5115 \\ taylor.martin357@gmail.com} % Your phone number and email
+\address{taylor.martin357@gmail.com} % Your phone number and email
 
 \begin{document}
 
@@ -39,7 +39,8 @@
 
 \begin{rSection}{Objective}
 
-Seeking an entry level position in the field of computer programming to expand upon my experience from my Co-Op experience at The Georgia Tech Research Institute.
+Seeking an entry level position in the field of computer programming to expand upon my \\
+experience from my Co-Op experience at The Georgia Tech Research Institute.
 
 \end{rSection}
 
@@ -49,10 +50,9 @@ Seeking an entry level position in the field of computer programming to expand u
 
 \begin{rSection}{Education}
 
-{\bf Southern Polytechnic State University} \hfill {\em Graduated December 2014} \\ 
-Bachelor's of Science in Computer Science \\%\smallskip \\
+{\bf Southern Polytechnic State University} {\footnotesize (now Kennesaw State Univ.)} \hfill {\em Graduated December 2014} \\ 
+Bachelor's of Science in Computer Science \hfill {\em Overall GPA: 3.59} \\%\smallskip \\
 Member of Upsilon Pi Epsilon Honor Society\\
-Overall GPA: 3.59
 
 \end{rSection}
 
@@ -62,7 +62,7 @@ Overall GPA: 3.59
 
 \begin{rSection}{Relevant Experience}
 
-\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{\em Jan 2012 - Dec 2014}{Vice-President 2013-2014, Software Lead 2012-2013}{}
+\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{\em Jan 2012 - Dec 2014}{Vice-President 2013-2014, Software Lead 2012-2013}{Marietta, GA}
 \item Competed against 25 other teams at the 2012 RoboSub International Competition.
 \item Worked on KSU-SPSU Competition Teams, Non-Sports consolidation team.
 \item Collaborated with the Mechanical and Electrical leaders to integrate all three systems
@@ -85,7 +85,7 @@ one simplified build script
 \begin{rSection}{Computer Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Languages & C++, Python, Ada, \LaTeX, Java, JavaScript, PHP, HTML, CSS \\
+Languages & Python, Ada, C++, \LaTeX, Java, JavaScript, PHP, HTML, CSS \\
 Operating Systems & Ubuntu, Raspbian, Arch Linux, Solaris 8 \\
 %Databases & MySQL, PostgreSQL, Microsoft SQL \\
 Tools & Git, GitHub, Subversion, MKS Integrity
@@ -102,7 +102,7 @@ Tools & Git, GitHub, Subversion, MKS Integrity
 \begin{rSubsection}{Premier Staffing}{\em Mar 2017 - Jun 2017}{Temp Materials Handler}{Kennesaw, GA}
 \item Worked with a team of five other people to produce more than 50 window shades a day
 \item Cross-trained and worked at two to three stations each shift
-\item Provided quality control by inspecting each shade for fabric defects and checking for correct measurements
+\item Provided quality control by inspecting each shade for defects %and checking for correct measurements
 \end{rSubsection}
 
 \begin{rSubsection}{Tuesday Morning}{\em Dec 2009 - Dec 2014}{Store Associate}{Austell, GA}
@@ -119,12 +119,12 @@ Tools & Git, GitHub, Subversion, MKS Integrity
 % AWARDS
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Awards}
+% \begin{rSection}{Awards}
 
-{Eagle Scout} and {Charter Member of Upsilon Pi Epsilon Honor Society, Lambda chapter of GA}
-%{SPSU CSE Dean's List} \hfill Fall 2011, Fall 2012
+% {Eagle Scout} and {Charter Member of Upsilon Pi Epsilon Honor Society, Lambda chapter of GA}
+% %{SPSU CSE Dean's List} \hfill Fall 2011, Fall 2012
 
-\end{rSection}
+% \end{rSection}
 
 
 %----------------------------------------------------------------------------------------
