Sub-divided files and removed Objective section

--- a/Martin_Taylor_Resume.tex
+++ b/Martin_Taylor_Resume.tex
@@ -26,10 +26,7 @@
 
 \usepackage[left=0.75in,top=0.5in,right=0.75in,bottom=0.5in]{geometry} % Document margins
 
-\name{Taylor S. Martin} % Your name
-\address{(470)~$\cdot$~338~$\cdot$~5115 \\ Powder Springs, GA 30127} % Your address
-%\address{123 Pleasant Lane \\ City, State 12345} % Your secondary addess (optional)
-\address{taylor.martin357@gmail.com} % Your phone number and email
+\input{Bio}
 
 \begin{document}
 
@@ -37,106 +34,30 @@
 % OBJECTIVE
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Objective}
-
-Seeking an entry level position in the field of computer programming to expand upon my \\
-experience from my Co-Op experience at The Georgia Tech Research Institute.
-
-\end{rSection}
+%\input{Objective}
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Education}
-
-{\bf Southern Polytechnic State University} {\footnotesize (now Kennesaw State Univ.)} \hfill {\em Graduated December 2014} \\ 
-Bachelor's of Science in Computer Science \hfill {\em Overall GPA: 3.59} \\%\smallskip \\
-Member of Upsilon Pi Epsilon Honor Society\\
-
-\end{rSection}
+\input{Education}
 
 %----------------------------------------------------------------------------------------
 % Relavant Experience
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Relevant Experience}
-
-\begin{rSubsection}{SPSU Autonomous Underwater Vehicle Team}{\em Jan 2012 - Dec 2014}{Vice-President 2013-2014, Software Lead 2012-2013}{Marietta, GA}
-\item Competed against 25 other teams at the 2012 RoboSub International Competition.
-\item Worked on KSU-SPSU Competition Teams, Non-Sports consolidation team.
-\item Collaborated with the Mechanical and Electrical leaders to integrate all three systems
-\item \textbf{Technical Environment:} Ubuntu, Raspbian, Arduino IDE, and OpenCV
-\item \textbf{Hardware:} Raspberry Pi, Arduino, and ODROID U3
-\end{rSubsection}
-
-\begin{rSubsection}{Georgia Tech Research Institute}{\em Jan 2013 - Aug 2013}{Co-Op Student Assistant}{Atlanta, GA}
-\item Reduced build process for software from multiple pages of hand-typed commands to \\
-one simplified build script
-\item Researched emulating a legacy system for continued use of required build software
-\end{rSubsection}
-
-\end{rSection}
+\input{RExp}
 
 %----------------------------------------------------------------------------------------
 % COMPUTER SKILLS
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Computer Skills}
-
-\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Languages & Python, Ada, C++, \LaTeX, Java, JavaScript, PHP, HTML, CSS \\
-Operating Systems & Ubuntu, Raspbian, Arch Linux, Solaris 8 \\
-%Databases & MySQL, PostgreSQL, Microsoft SQL \\
-Tools & Git, GitHub, Subversion, MKS Integrity
-\end{tabular}
-
-\end{rSection}
+\input{Computer}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Previous Employment}
-
-\begin{rSubsection}{Premier Staffing}{\em Mar 2017 - Jun 2017}{Temp Materials Handler}{Kennesaw, GA}
-\item Worked with a team of five other people to produce more than 50 window shades a day
-\item Cross-trained and worked at two to three stations each shift
-\item Provided quality control by inspecting each shade for defects %and checking for correct measurements
-\end{rSubsection}
-
-\begin{rSubsection}{Tuesday Morning}{\em Dec 2009 - Dec 2014}{Store Associate}{Austell, GA}
-\item Handled receipt of store merchandise, totaling to more than 5,000 items per week
-\item Provided accurate counts during physical product inventory
-\item Configured and maintained shelving units per written instructions
-\item Troubleshooted common cash register problems
-\item Trained new and old staff on using updated point of sale system
-\end{rSubsection}
-
-\end{rSection}
-
-%----------------------------------------------------------------------------------------
-% AWARDS
-%----------------------------------------------------------------------------------------
-
-% \begin{rSection}{Awards}
-
-% {Eagle Scout} and {Charter Member of Upsilon Pi Epsilon Honor Society, Lambda chapter of GA}
-% %{SPSU CSE Dean's List} \hfill Fall 2011, Fall 2012
-
-% \end{rSection}
-
-
-%----------------------------------------------------------------------------------------
-%	EXAMPLE SECTION
-%----------------------------------------------------------------------------------------
-
-%\begin{rSection}{Section Name}
-
-%Section content\ldots
-
-%\end{rSection}
-
-%----------------------------------------------------------------------------------------
+\input{EmploymentNGtri}
 
 \end{document}
