Updated for Salesforce

--- a/Education.tex
+++ b/Education.tex
@@ -1,7 +1,10 @@
 \begin{rSection}{Education}
 
-{\bf Southern Polytechnic State University} {\footnotesize (now Kennesaw State Univ.)} \hfill {\em Graduated December 2014} \\ 
-Bachelor of Science in Computer Science \hfill {\em Overall GPA: 3.59} \\
+{\bf Techbridge Technology Career Program}\hfill {\em Expected Graduation Feb 2019} \\
+{\em Salesforce Administrator}
+
+{\bf Southern Polytechnic State University}{\footnotesize (now Kennesaw State Univ.)}\hfill{\em Graduated Dec 2014}\\
+{\em Bachelor of Science in Computer Science}\hfill{\em Overall GPA: 3.59}\\
 Member of Upsilon Pi Epsilon Honor Society
 
 \end{rSection}
